--- a/newIDE/app/public/index.html
+++ b/newIDE/app/public/index.html
@@ -46,6 +46,7 @@
     <script>
       window["GD_STARTUP_TIMES"] = [["indexHtmlFirstScriptStarted", performance.now()]];
     </script>
+    <script type="text/javascript" src="cordova.js"></script>
 
     <noscript>
       <div style="font-family: sans-serif; padding: 15px;">
